# src/routes/funderjetRoutes.js
@@ -74,6 +74,9 @@ module.exports = function (app) {
     app.route('/funderjet/api/token/burn')
         .post(token.burnToken)
 
+    app.route('/funderjet/api/token/mint')
+        .post(token.mintToken)
+
     app.route('/funderjet/api/user/registration')
         .post(user.registerUser)
     
